# cold_lizard_parking

./: main.py  parking_overview.csv  pyproject.toml
cold_lizard_parking/: main.py
database/: utils.py
models/: parking_spot.py  registration.py
